--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=api-clima
 server.port=8080
-openweathermap.api.key= sua chave da api
+openweathermap.api.key= Sua_chave_api
